# cca-audit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMOTION.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/harness/: audit_workflow.js  bugs_fresh_index.json  bugs_index.json  build_tasks.py  fresh_exclusions.json  fresh_manifest.json  fresh_materialize.py  fresh_provenance.json  manifest.json  materialize.py  mine_fresh.py  probe_workflow.js  score.py  select_sample.py  tasks_fresh_wf.json  tasks_wf.json
benchmarks/results/: PILOT_FINDINGS.md  RESULTS.md  matplotlib__3.smoke.json  probe_fresh.json  summary.json  summary_fresh.json  wf_fresh_output.json  wf_output.json
cca_checks/: __main__.py  cargo_repro.py  claim.py  clippy_check.py  clock_check.py  config.py  hypo.py  properties.py  property_check.py  pyright_check.py  repro_runner.py  scope.py  semgrep_check.py  substrate.py  toolpath.py  treesitter.py
cca_checks/languages/: __init__.py  base.py  python.py  rust.py
cca_checks/plugin/: __init__.py  cli.py
cca_checks/plugin/agents/: cca-differential-review.md  cca-fp-check.md  cca-numeric-auditor.md  cca-perf-auditor.md
cca_checks/plugin/commands/: audit-fix-v2.md  audit-fix.md
cca_checks/plugin/tools/: README.md  cca_scorecard.py  test_cca_scorecard.py
cca_checks/rules/: python_sinks.yaml  python_taint.yaml  rust_sinks.yaml  rust_taint.yaml
claude-code/: README.md  install.ps1  install.sh
claude-code/agents/: cca-architect-reviewer.md  cca-bug-auditor.md  cca-code-auditor.md  cca-dep-auditor.md  cca-deploy-auditor.md  cca-differential-review.md  cca-doc-auditor.md  cca-env-validator.md  cca-fix-planner.md  cca-fp-check.md  cca-numeric-auditor.md  cca-perf-auditor.md  cca-pr-writer.md  cca-security-auditor.md
claude-code/commands/: audit-fix-v2.md  audit-fix.md
claude-code/tools/: README.md  cca_tautology_check.py  test_cca_tautology_check.py
codex/: README.md  cca-audit.sh  install.sh
codex/agents/: cca-architect-reviewer.md  cca-bug-auditor.md  cca-code-auditor.md  cca-dep-auditor.md  cca-doc-auditor.md  cca-env-validator.md  cca-fix-planner.md  cca-perf-auditor.md  cca-pr-writer.md  cca-security-auditor.md
docs/: auditor-scopes.md  blog-benchmark-memorization-gap.md  blog-fluency-isnt-evidence.md  blog-why-ai-review-hallucinates.md  configuration.md  demo.html  extending.md  pipeline-diagram.md  v3-design.md
docs/specs/: 2026-07-24-fresh-corpus-scale-design.md
docs/superpowers/plans/: 2026-07-09-v3-deterministic-verification.md  2026-07-10-v3.1-type-nullability.md  2026-07-10-v3.2-taint-semgrep.md  2026-07-21-numeric-differential-oracle.md  2026-07-21-substrate-differential.md
docs/superpowers/specs/: 2026-07-10-v3.1-type-nullability-design.md  2026-07-10-v3.2-taint-semgrep-design.md  2026-07-21-numeric-differential-oracle-design.md  2026-07-21-substrate-differential-design.md
examples/bps-sizing/: DEMO-SPEC.md  DEMO.md  README.md  RECEIPTS.md  model.py  sizer.py  test_sizer.py
examples/bps-sizing-b/: schemas.py  service.py  sizer.py
examples/bps-sizing-c/: settings.py  sizer.py
examples/bps-sizing/definedness_trap/: service.py  settings.py
examples/sign-trap/: README.md  growth.py  t_NUM-001_props.py
openrouter/: README.md  cca-audit.example.yaml  pyproject.toml
openrouter/cca_audit/: __init__.py  __main__.py  cli.py  config.py  consolidator.py  detector.py  pipeline.py  reviewer.py
openrouter/cca_audit/auditors/: __init__.py  base.py  bug.py  code.py  dep.py  doc.py  env.py  perf.py  security.py
openrouter/cca_audit/prompts/: bug.j2  code.j2  dep.j2  doc.j2  env.j2  perf.j2  security.j2
openrouter/cca_audit/reporters/: json_report.py  markdown.py
openrouter/tests/: test_consolidator.py  test_detector.py
tests/: test_bench_score.py  test_blindness_probe.py  test_capabilities.py  test_cargo_repro.py  test_ci_contract.py  test_claim.py  test_cli.py  test_clippy_check.py  test_clock_check.py  test_clock_check_rust.py  test_config.py  test_dev_extra_completeness.py  test_fixture_contract.py  test_language_guard.py  test_language_registry.py  test_plugin_cli.py  test_plugin_install.py  test_properties.py  test_property_check.py  test_pyright_check.py  test_readme_counts_are_consistent.py  test_readme_urls_are_absolute.py  test_repro_runner.py  test_rules_catalog.py  test_rust_taint.py  test_scope.py  test_selfaudit_hardening.py  test_semgrep_check.py  test_substrate.py  test_toolpath.py  test_treesitter.py
tests/acceptance/: test_numeric_suite.py  test_substrate_suite.py  test_taint_suite.py  test_trap_suite.py
tests/fixtures/: bad_arg_type.py  guarded_optional.py  passes_fixture.py  raises_test.py  unguarded_optional.py  untyped_optional.py
tests/fixtures/numeric/: drift.py  props_fixed.py  props_hold.py  props_violated.py
tests/fixtures/rust/: Cargo.toml  rustfmt.toml
tests/fixtures/rust/src/: clock.rs  clock_blockers.rs  taint.rs
tests/fixtures/rust_clippy/: Cargo.toml  rustfmt.toml
tests/fixtures/rust_clippy/src/: lib.rs
tests/fixtures/rust_clippy/tests/: t_overflow_repro.rs  t_passes.rs
tests/fixtures/substrate/: helper_module.py  props_sign_trap.py  props_stable.py  props_unstable.py  targets.py
tests/fixtures/taint/: orm_no_sink.py  sql_concat.py  sql_parameterized.py  sql_unlisted_driver.py
