[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cca_checks"
version = "0.6.0"
description = "Deterministic verification helpers for CCA-Audit's fp-check gate"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Giulio D'Erme" }]
keywords = ["static-analysis", "code-review", "verification", "claude-code", "llm"]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/GiulioDER/cca-audit"
Repository = "https://github.com/GiulioDER/cca-audit"
Issues = "https://github.com/GiulioDER/cca-audit/issues"

[project.optional-dependencies]
# pytest belongs in `numeric`, not just hypothesis: the numeric claim type runs its
# generated property file THROUGH pytest, so installing hypothesis alone leaves
# every numeric claim escalating to UNCERTAIN -- and on the DEEP tier a NUM-* P1
# cannot be fixed at all without a hypothesis artifact. An extra that half-enables
# a feature is worse than one that does not exist, because the failure is silent.
numeric = ["hypothesis>=6.0", "pytest>=7", "mpmath>=1.3"]
# The Rust backend's PARSER. Not its diagnostics: `panic_path`, `overflow`,
# `error_swallow` and `unsafe_op` are settled by clippy, which is part of the target's
# own toolchain and cannot be pip-installed. Splitting them is deliberate -- a grammar
# wheel always works, so `clock_leak` and enclosing-span resolution keep working on a
# crate that does not build, which is exactly when an auditor most needs them.
rust = ["tree-sitter>=0.23", "tree-sitter-rust>=0.23"]
# The whole deterministic layer in one install, so it is reproducible from the
# manifest rather than from a sentence in the README.
verify = ["hypothesis>=6.0", "pytest>=7", "pyright>=1.1.350", "semgrep>=1.50", "mpmath>=1.3",
          "tree-sitter>=0.23", "tree-sitter-rust>=0.23"]
# mpmath belongs here for the same reason pytest belongs in `numeric`: CI installs
# `.[dev]`, and both tests/test_substrate.py and tests/acceptance/test_substrate_suite.py
# `pytest.importorskip("mpmath")` at module scope -- without it here, ~25 substrate
# tests (including the integrity gate, the feature's central safety guarantee) skip
# on every CI run instead of executing, and a regression there merges with green CI.
# tree-sitter belongs here for exactly the reason mpmath does: tests/test_treesitter.py
# and tests/test_clock_check_rust.py `pytest.importorskip` it at module scope, and CI
# installs `.[dev]` -- so without it here the entire Rust parsing layer would skip
# silently on every CI run and a regression in it would merge green.
# test_dev_extra_completeness.py asserts this invariant rather than this list.
dev = ["hypothesis>=6.0", "pytest>=7", "ruff>=0.4", "mpmath>=1.3",
       "tree-sitter>=0.23", "tree-sitter-rust>=0.23"]

[tool.setuptools.packages.find]
# Glob, not a hand-maintained list: a literal `packages = ["cca_checks"]` silently
# drops any future subpackage from the wheel, and that failure surfaces only as an
# ImportError in installed use -- never in a repo-root test run.
include = ["cca_checks*"]

[tool.setuptools.package-data]
cca_checks = ["rules/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
# tests/fixtures/ is sample code that is deliberately imperfect, and its LINE
# NUMBERS are part of the test contract -- the suite settles claims at specific
# coordinates in these files. Auto-formatting them silently moves the defect: a
# `ruff --fix` pass rewrote `Optional[Card]` to `Card | None`, dropped the
# now-unused import, shifted every line up by one, and turned a CONFIRMED
# acceptance test into an UNCERTAIN. Never lint the fixtures.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# E731: tests use short throwaway lambdas as stand-in callables; a def per stub
#       would obscure more than it clarifies.
# E501: several fixtures embed VERBATIM pyright/Hypothesis output, which the
#       parsers under test match against. Reflowing them to satisfy a line-length
#       rule would change the data the assertion depends on.
"tests/*" = ["E731", "E501"]

[tool.pyright]
# A tool whose product is "pyright as evidence" should pass its own check.
include = ["cca_checks"]
typeCheckingMode = "standard"
